# swerve_steering

./: .clang-format  .clang-tidy  .gitignore  Dockerfile  README.md  dependencies_exact.rosinstall  jenkins-pipeline
odometry_controller/: CMakeLists.txt  odometry_controller_plugins.xml  package.xml  record_rosbag.launch
odometry_controller/config/: config.yaml
odometry_controller/include/odometry_controller/: odometry_controller.h
odometry_controller/src/: odometry_controller.cpp
odometry_controller/visualization/: plotjuggler.xml
strafe_joy/: CMakeLists.txt  README.md  package.xml
strafe_joy/launch/: strafe_joy.launch
strafe_joy/src/: strafe_joy.cpp
swerve_brakes/: CMakeLists.txt  README.md  package.xml
swerve_brakes/arduino_src/encoders_ros/: encoders_ros.ino
swerve_brakes/arduino_src/readAngleTwoSensors/: readAngleTwoSensors.ino
swerve_brakes/launch/: brakes.launch
swerve_brakes/service/: ros.conf  swerve-brakes-arduino.service
swerve_brakes/src/: close.py  open.py
swerve_control/: CMakeLists.txt  README.md  package.xml
swerve_control/config/: joint_state_controller.yaml  twist_mux.yaml
swerve_control/config/multiplot/: joint_states.xml  left_back_steer.xml  left_back_wheel.xml  left_front_steer.xml  right_back_steer.xml  right_back_wheel.xml
swerve_control/config/plotjuggler/: cmd_twist_vs_odom_twist_and_joint_velocities.xml
swerve_control/launch/: highlevel_controller.launch  imu_odom_ekf.launch  opc.launch  simulation.launch
swerve_control/rviz/: swerve.rviz
swerve_control/src/: hbc_to_twist.py
swerve_description/: CMakeLists.txt  README.md  package.xml
swerve_description/config/: gazebo_ros_control_params.yaml
swerve_description/launch/: gazebo.launch  visualization.launch
swerve_description/meshes/: arm_fl.stl  arm_fr.stl  arm_rl.stl  arm_rr.stl  leg_fl.stl  leg_fr.stl  leg_rl.stl  leg_rr.stl  wheel_fl.stl  wheel_fr.stl  wheel_rl.stl  wheel_rr.stl
swerve_description/rviz/: top_down.rviz  top_down_mabi.rviz  urdf.rviz
swerve_description/scripts/: create_path.py  michelabi_urdf_gen.sh
swerve_description/urdf/: swerve.urdf.xacro  swerve_fixed.urdf
swerve_description/urdf/include/: epson.urdf.xacro  michelabi_components.xacro  velodyne_lidar.xacro
swerve_description/worlds/: slope.world
swerve_mpc/swerve_mpc/: CMakeLists.txt  README.md  package.xml
swerve_mpc/swerve_mpc/config/mpc/: task.info
swerve_mpc/swerve_mpc/config/task_space_action_server/: dummy_visualization_swerve_base.yaml  swerve_base.yaml
swerve_mpc/swerve_mpc/include/swerve_mpc/: SwerveDynamics.hpp  SwerveInterface.hpp  SwerveModelInfo.hpp  SwervePinocchioMapping.hpp  SwerveTarget.hpp
swerve_mpc/swerve_mpc/include/swerve_mpc/constraint/: EndEffectorConstraint.hpp  JointLimitsConstraint.hpp  JointVelocityLimits.hpp  LegsConstraintCppAd.hpp  LegsInputConstraints.hpp  WheelRollingConstraintCppAd.hpp
swerve_mpc/swerve_mpc/include/swerve_mpc/cost/: LegsQuadraticCost.hpp  NominalArmStateCppAd.hpp  NominalSteerStateCppAd.hpp  QuadraticInputCost.h
swerve_mpc/swerve_mpc/include/swerve_mpc/dummy_tools/: SwerveDummyVisualization.hpp
swerve_mpc/swerve_mpc/include/swerve_mpc/reference_manager/: BrakesMode.h  SwerveReferenceManager.hpp
swerve_mpc/swerve_mpc/launch/: swerve_mpc.launch  visualize.launch
swerve_mpc/swerve_mpc/rviz/: dummy_swerve.rviz
swerve_mpc/swerve_mpc/scripts/: a_close.py  a_open.py  clock_publisher.py  h_close.py  h_open.py  joy_reference.py  x_close.py  x_open.py
swerve_mpc/swerve_mpc/src/: SwerveInterface.cpp  SwerveMpcNode.cpp  SwervePinocchioMapping.cpp  SwerveTarget.cpp
swerve_mpc/swerve_mpc/src/constraint/: EndEffectorConstraint.cpp  JointLimitsConstraint.cpp  JointVelocityLimits.cpp  LegsConstraintCppAd.cpp  LegsInputConstraints.cpp  WheelRollingConstraintCppAd.cpp
swerve_mpc/swerve_mpc/src/cost/: NominalArmStateCppAd.cpp  NominalSteerStateCppAd.cpp
swerve_mpc/swerve_mpc/src/dummy_tools/: SwerveDummyMRT.cpp  SwerveDummyVisualization.cpp
swerve_mpc/swerve_mpc/src/dynamics/: SwerveDynamics.cpp
swerve_mpc/swerve_mpc/src/reference_manager/: SwerveReferenceManager.cpp
swerve_mpc/swerve_mpc_ros_control/: CMakeLists.txt  README.md  package.xml  swerve_mpc_ros_control_plugin.xml
swerve_mpc/swerve_mpc_ros_control/config/: config.yaml
swerve_mpc/swerve_mpc_ros_control/include/swerve_mpc_ros_control/: swerve_mpc_ros_control.hpp
swerve_mpc/swerve_mpc_ros_control/src/: swerve_mpc_ros_control.cpp
swerve_msgs/: CMakeLists.txt  package.xml
swerve_msgs/srv/: BrakesService.srv  TriggerBrakes.srv
