<?xml version="1.0"?>
<package format="2">
  <name>odometry_controller</name>
  <version>0.15.0</version>
  <description>Controller for a steer drive mobile base. Forked from ROWESYS.</description>
  <maintainer email="jzehnder@student.ethz.ch">Jon Zehnder</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>diff_drive_controller</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>swerve_msgs</depend>
  <depend>eigen</depend>
  <depend>tf2_ros</depend>
  <depend>eigen_conversions</depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>urdf</build_depend>

  <exec_depend>pluginlib</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/odometry_controller_plugins.xml"/>
  </export>
</package>