<?xml version="1.0"?>
<package format="2">
  <name>strafe_joy</name>
  <version>0.0.0</version>
  <description>The strafe_joy package</description>
  <maintainer email="jzehnder@ethz.ch">Jon Zehnder</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>swerve_msgs</depend>

  <export>
  </export>
</package>
