<?xml version="1.0"?>
<package format="2">
  <name>swerve_mpc</name>
  <version>0.0.1</version>
  <description>The Swerve MPC package</description>
  <maintainer email="dbaret@ethz.ch">Davide Baret</maintainer>

  <license>TODO</license>

  <depend>roscpp</depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>robot_state_publisher</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_msgs</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>swerve_msgs</depend>
  <depend>trapezoidal_tracker</depend>
  <depend>manipulation_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
